--- a/Vue/Vue项目/travel/src/assets/styles/reset.css
+++ b/Vue/Vue项目/travel/src/assets/styles/reset.css
@@ -23,3 +23,11 @@ html {overflow-x: hidden;height: 100%;font-size: 50px;-webkit-tap-highlight-colo
 body {font-family: Arial, "Microsoft Yahei", "Helvetica Neue", Helvetica, sans-serif;color: #333;font-size: .28em;line-height: 1;-webkit-text-size-adjust: none;}
 hr {height: .02rem;margin: .1rem 0;border: medium none;border-top: .02rem solid #cacaca;}
 a {color: #666;text-decoration: none;}
+
+
+html,body{
+    min-width: 320px;
+    width: 100%;
+    max-width: 750px;
+    margin: 0 auto;
+}
